# NWSApi-Project

./: .LICENSE.txt.kate-swp  .~lock.countyTable.csv#  CMakeLists.txt  NWSApi.kdev4  README.md  countyTable.csv  main.cpp  tableLookup.cpp  tableLookup.hpp
.kdev4/: NWSApi.kdev4
licenses/nlohmann/: LICENSE
